force-app/main/default/objects/Contact/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Id,    FirstName &amp; &apos; &apos; &amp; LastName  , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>