force-app/main/default/objects/Contact/fields/FullName_Concat__c.field-meta.xml
<CustomField>
    <fullName>FullName_Concat__c</fullName>
    <formula>FirstName&amp;&quot; &quot;&amp;LastName</formula>
    <label>FullName Concat</label>
    <type>Text</type>
</CustomField>