force-app/main/default/objects/Contact/fields/Grant_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the lookup() relationship established to tie in Contacts with Grants.</description>
    <label>Grant Name</label>
    <referenceTo>Grant__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>